graphql query bug

--- a/posts/HelloWorld/hello-world.mdx
+++ b/posts/HelloWorld/hello-world.mdx
@@ -2,6 +2,7 @@
 title: Hello World!
 slug: hello-World
 author: Rachit Srivastava
+image: ./images/json-tyson-hola.jpg
 ---
 
 This is m first blog post. I wrote it with mdx.
