--- a/posts/anotherpost/another-post.mdx
+++ b/posts/anotherpost/another-post.mdx
@@ -2,6 +2,7 @@
 title: Another Post!
 slug: another-post
 author: Rachit Srivastava
+image: ./images/pablo-gentile-hello.jpg
 ---
 
 Next Blog Post.
